# stem_agent

./: experiments.md  readme.md  setup.md  stem_agent_build_spec.md  writeup.md
stem_agent/: .env.example  README.md  pyproject.toml
stem_agent/eval_suite/: agent_development.json  code_review.json  information_security.json  questions.json
stem_agent/eval_suite/gpt-5.4/: code_review.json  deep_research.json
stem_agent/eval_suite/gpt-5.4-mini/: deep_research.json
stem_agent/eval_suite/gpt-5.5/: code_review.json  deep_research.json
stem_agent/outputs/: eval_results.json  final_agent.json
stem_agent/outputs/agent_development/checkpoints/: v0_iter0_score0.766.json  v1_iter1_score0.760.json  v1_iter3_score0.757.json  v2_iter5_score0.750.json  v2_iter6_score0.733.json  v2_iter8_score0.756.json
stem_agent/outputs/checkpoints/: v0_iter0_score0.918.json  v1_iter1_score0.926.json  v2_iter2_score0.916.json  v2_iter3_score0.906.json  v2_iter4_score0.915.json  v2_iter5_score0.901.json  v2_iter6_score0.922.json  v2_iter7_score0.897.json  v2_iter8_score0.917.json
stem_agent/outputs/code_review/: eval_by_tier.json  eval_results.json  final_agent.json
stem_agent/outputs/deep_research/: eval_by_tier.json  final_agent.json
stem_agent/stem_agent/: main.py
stem_agent/stem_agent/core/: agent_spec.py  checkpointer.py  llm.py  paths.py  runner.py
stem_agent/stem_agent/eval/: harness.py
stem_agent/stem_agent/phases/: crystallize.py  differentiate.py  groundtruth.py  hypothesize.py  sense.py
stem_agent/writeup/: writeup.md
(+67 files in other folders)
