[project]
name = "stem-agent"
version = "0.1.0"
description = "A stem agent that grows into a specialized Deep Research agent via self-differentiation"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "ddgs>=7.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "langchain>=1.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-litellm>=0.6.5",
]

[project.optional-dependencies]
search = [
    "tavily-python>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stem_agent"]
